--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node build/main.js",
     "test": "echo \"Nice Test :)\"",
-    "dev": "backpack dev",
-    "build": "nuxt build && backpack build",
-    "precommit": "npm run lint",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "dev": "nodemon --exec nuxt",
+    "build": "nuxt build && backpack build"
   },
   "private": false,
   "repository": "https://github.com/TiagoDanin/VueJs-with-Express.git",
@@ -52,20 +50,18 @@
   "dependencies": {
     "@nuxtjs/axios": "5.4.1",
     "@nuxtjs/pwa": "3.0.0-beta.14",
+    "@nuxtjs/vuetify": "^0.5.5",
     "axios": "0.18.0",
     "body-parser": "1.18.3",
     "cookie-session": "1.3.3",
     "cross-env": "5.0.1",
     "express": "4.16.4",
     "nuxt": "2.6.2",
-    "source-map-support": "0.4.15",
     "vue": "2.6.10",
     "vuetify": "1.5.11"
   },
   "devDependencies": {
-    "backpack-core": "0.8.3",
-    "stylus": "0.54.5",
-    "stylus-loader": "3.0.1"
+    "nodemon": "^1.18.11"
   },
   "thanks": [
     {
