--- a/package.json
+++ b/package.json
@@ -1,76 +1,83 @@
 {
-  "name": "vuejs-with-express",
-  "main": "server/index.js",
-  "version": "1.0.0",
-  "description": "Example PWA + Nuxt + Vue + Axios + Express",
-  "author": {
-    "name": "Tiago Danin",
-    "email": "TiagoDanin@outlook.com",
-    "url": "https://tiagodanin.github.io"
-  },
-  "license": "MIT",
-  "keywords": [
-    "pwa",
-    "nuxt",
-    "vue",
-    "axios",
-    "express",
-    "vuejs",
-    "nuxtjs",
-    "expressjs"
-  ],
-  "scripts": {
-    "start": "cross-env NODE_ENV=production node build/main.js",
-    "test": "echo \"Nice Test :)\"",
-    "dev": "nodemon --exec nuxt",
-    "build": "nuxt build && backpack build"
-  },
-  "private": false,
-  "repository": "https://github.com/TiagoDanin/VueJs-with-Express.git",
-  "homepage": "https://TiagoDanin.github.io/VueJs-with-Express",
-  "bugs": "https://github.com/TiagoDanin/VueJs-with-Express/issues",
-  "github": {
-    "name": "VueJs-with-Express",
-    "owner": "TiagoDanin"
-  },
-  "files": [
-    "LICENSE",
-    "README.md",
-    "api",
-    "assets",
-    "backpack.config.js",
-    "components",
-    "layouts",
-    "nuxt.config.js",
-    "package.json",
-    "pages",
-    "plugins",
-    "server"
-  ],
-  "dependencies": {
-    "@nuxtjs/axios": "5.4.1",
-    "@nuxtjs/pwa": "3.0.0-beta.14",
-    "@nuxtjs/vuetify": "^0.5.5",
-    "axios": "0.18.0",
-    "body-parser": "1.18.3",
-    "cookie-session": "1.3.3",
-    "cross-env": "5.0.1",
-    "express": "4.16.4",
-    "nuxt": "2.6.2",
-    "vue": "2.6.10",
-    "vuetify": "1.5.11"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.11"
-  },
-  "thanks": [
-    {
-      "name": "danijelmartinek",
-      "url": "https://github.com/danijelmartinek/nuxt.js-express-vuetify",
-      "description": "Fork/Inspiration in nuxt.js-express-vuetify"
-    }
-  ],
-  "engines": {
-    "node": ">=8"
-  }
+	"name": "vuejs-with-express",
+	"main": "server/index.js",
+	"bin": {},
+	"preferGlobal": false,
+	"version": "1.0.0",
+	"description": "Example PWA + Nuxt + Vue + Axios + Express",
+	"author": {
+		"name": "Tiago Danin",
+		"email": "TiagoDanin@outlook.com",
+		"url": "https://tiagodanin.github.io"
+	},
+	"license": "MIT",
+	"keywords": [
+		"pwa",
+		"nuxt",
+		"vue",
+		"axios",
+		"express",
+		"vuejs",
+		"nuxtjs",
+		"expressjs"
+	],
+	"scripts": {
+		"start": "cross-env NODE_ENV=production node build/main.js",
+		"test": "echo \"Nice Test :)\"",
+		"dev": "nodemon --exec nuxt",
+		"build": "nuxt build && backpack build"
+	},
+	"engines": {
+		"node": ">=8"
+	},
+	"private": false,
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/TiagoDanin/VueJs-with-Express.git"
+	},
+	"homepage": "https://TiagoDanin.github.io/VueJs-with-Express",
+	"bugs": {
+		"url": "https://github.com/TiagoDanin/VueJs-with-Express/issues"
+	},
+	"github": {
+		"name": "VueJs-with-Express",
+		"owner": "TiagoDanin"
+	},
+	"files": [
+		"LICENSE",
+		"README.md",
+		"api",
+		"assets",
+		"backpack.config.js",
+		"components",
+		"layouts",
+		"nuxt.config.js",
+		"package.json",
+		"pages",
+		"plugins",
+		"server"
+	],
+	"dependencies": {
+		"@nuxtjs/axios": "5.4.1",
+		"@nuxtjs/pwa": "3.0.0-beta.14",
+		"@nuxtjs/vuetify": "^0.5.5",
+		"axios": "0.18.0",
+		"body-parser": "1.18.3",
+		"cookie-session": "1.3.3",
+		"cross-env": "5.0.1",
+		"express": "4.16.4",
+		"nuxt": "2.6.2",
+		"vue": "2.6.10",
+		"vuetify": "1.5.11"
+	},
+	"devDependencies": {
+		"nodemon": "^1.18.11"
+	},
+	"thanks": [
+		{
+			"name": "danijelmartinek",
+			"url": "https://github.com/danijelmartinek/nuxt.js-express-vuetify",
+			"description": "Fork/Inspiration in nuxt.js-express-vuetify"
+		}
+	]
 }
