--- a/package.json
+++ b/package.json
@@ -61,13 +61,13 @@
 		"@nuxtjs/axios": "5.4.1",
 		"@nuxtjs/pwa": "3.0.0-beta.14",
 		"@nuxtjs/vuetify": "^0.5.5",
-		"axios": "0.18.0",
+		"axios": "^0.18.0",
 		"body-parser": "1.19.0",
 		"cookie-session": "1.3.3",
-		"cross-env": "5.0.1",
-		"express": "4.16.4",
-		"nuxt": "2.6.3",
-		"vue": "2.6.10",
+		"cross-env": "^5.0.1",
+		"express": "^4.16.4",
+		"nuxt": "^2.6.3",
+		"vue": "^2.6.10",
 		"vuetify": "1.5.11"
 	},
 	"devDependencies": {
